--- a/resume.tex
+++ b/resume.tex
@@ -171,13 +171,13 @@ Experienced engineer having worked as both a software and systems engineer with 
 
 \begin{tabular}{rl}
 Languages
-& \textsc{Python}, \textsc{Java}, \textsc{C++}, \textsc{C}, \textsc{Golang},\\
+& \textsc{Python}, \textsc{Java}, \textsc{C++}, \textsc{C}\\
 Operating Systems
 & \textsc{Linux (All flavors)},  \textsc{FreeBSD}, \textsc{OpenBSD} \\
 Systems
-& \textsc{Jenkins}, \textsc{Docker}, \textsc{Kubernetes}, \textsc{Artifactory}, \\
-& \textsc{Terraform}, \textsc{Consul}, \textsc{Vault}, \textsc{Nomad}\\
-& \textsc{Packer}, \textsc{Networking}\\
+& \textsc{Docker}, \textsc{Kubernetes}, \textsc{Artifactory}, \\
+& \textsc{Terraform}, \textsc{Consul}, \textsc{Vault}, \textsc{Nomad},\\
+& \textsc{Packer}, \textsc{Vagrant}, \textsc{Networking}, \textsc{Jenkins} \\
 Cloud
 & \textsc{AWS}, \textsc{Digital Ocean},\\
 Misc.
