updating resume with new job

--- a/resume.tex
+++ b/resume.tex
@@ -74,7 +74,7 @@
 %----------------------------------------------------------------------------------------
 
 \par{\centering{\sffamily\Huge Mason Egger}\\ % Your name
-{\color{headings}\fontspec[Variant = 2]{Times New Roman} Systems and Software Engineer, Educator}\\[15pt]\par} 
+{\color{headings}\fontspec[Variant = 2]{Times New Roman} Platform Engineer, Educator}\\[15pt]\par} 
 	
 %----------------------------------------------------------------------------------------
 
@@ -85,7 +85,7 @@
 %	OBJECTIVE
 %----------------------------------------------------------------------------------------
 \section{About Me}
-Experienced engineer having worked as both a software and systems engineer with a penchant for security, distributed systems, networking, and Python. Passionate worker and proven leader with excellent time/project/priority management skills; driven to succeed at any task. Capable learner who can not only rapidly close any knowledge gap, but enjoys teaching others and writing more practical documents/guides. Enthusiast about all things open source. Passionate educator currently volunteering teaching AP Computer Science at a local high school.
+Experienced engineer having worked as both a software and systems engineer with a penchant for security, distributed systems, networking, and Python. Passionate worker and proven leader with excellent time/project/priority management skills; driven to succeed at any task. Capable learner who can not only rapidly close any knowledge gap, but enjoys teaching others and writing more practical documents/guides. Enthusiast about all things open source. Passionate educator currently volunteering teaching through the Microsoft TEALS program.
 
 %----------------------------------------------------------------------------------------
 %       WORK EXPERIENCE
@@ -94,54 +94,39 @@ Experienced engineer having worked as both a software and systems engineer with 
 \section{Work Experience} 
 
 %------------------------------------------------
-% WORK EXPERIENCE 1
+% WORK EXPERIENCE 4
 %------------------------------------------------
 
-{\raggedleft\textsc{March 2018 - present}\par}
+{\raggedright\large Sr. Software Engineer\\
+\textit{July 2019 - Present}\\
+\textit{Vrbo, Austin, TX} \\[5pt]}
 
-{\raggedright\large Sr. Site Reliability Engineer\\
-\textit{Vrbo}\\[5pt]}
-
-\normalsize{Responsible for HomeAway's internal hybrid cloud Platform as a Service, containing more than a thousand nodes and tens of thousands of containers. Worked to implement the seamless replacement of schedulers from Mesos to Nomad. Implemented automation tooling around the auto-scaling of clusters. Worked to implement a Data Science and Machine Learning platform through implementing standards, pipelines, and project generators for Python developers and Data Scientists. Created a unified process and led the effort for unifying all of the Cloud Platform documentation.}\\
-
-%------------------------------------------------
-% WORK EXPERIENCE 2
-%------------------------------------------------
-
-{\raggedleft\textsc{December 2015 - March 2018}\par}
-
-{
-\raggedright\large Software Engineer II\\
-\textit{Forcepoint, powered by Raytheon}\\
-\raggedright\small \textit{Software Engineer I}\\
-\raggedright\small \textit{Associate Software Engineer}\\
-}
-
-\normalsize{Designed and implemented a Cloud based CI/CD pipeline for the Cloud 2.0 initiative on AWS. Integral part of the team that re-architected an on-premise CentOS based secure operating system in an effort to replace the legacy product. Implemented a custom plugin based initialization framework to allow for quick development of new software integrations. Implemented CI/CD pipelines for the build, code quality checks, and documentation generation of the code base. Promoted multiple times within same team.}\\
-
+\normalsize{Responsible for the Ministry of Truth, Vrbo's highly available cloud platform as a service used for all application deployments and container orchestration across Vrbo's hybrid multi-cloud. Supported application deployment for roughly 2000 engineers amounting to tens of thousands of containers with a team of four. }\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 3
 %------------------------------------------------
 
-{\raggedleft\textsc{June 2012 - December 2015}\par}
+{\raggedright\large Sr. Site Reliability Engineer\\
+\textit{March 2018 - July 2019}\\
+\textit{Vrbo, Austin, TX} \\[5pt]}
 
-{\raggedright\large Undergraduate Instructional Assistant\\
-\textit{Department of Computer Science, Texas State University}\\[5pt]}
+\normalsize{Responsible for Vrbo's internal hybrid cloud Platform as a Service infrastructure, containing more than a thousand nodes and tens of thousands of containers. Worked to implement the seamless replacement of schedulers from Mesos to Nomad. Led the effort to make Vrbo a polyglot software shop by implementing first class support for Python through creating standards, pipelines, containers, and project generators for Python developers and Data Scientists. Created a unified process and led the effort for revitalizing all of the Cloud Platform documentation.}\\
 
-\normalsize{Lab Instructor and tutor tasked with tutoring students in a wide range of subjects and instructing course specific labs. Designed an accelerated curriculum for the advanced introductory course. Lead a team tasked with designing new software and utilities for use by faculty, staff, and students. Managed multiple departmental servers and created automated solutions for departmental tasks.}\\
+%------------------------------------------------
+% WORK EXPERIENCE 2
+%------------------------------------------------
 
-%----------------------------------------------------------------------------------------
-% PROJECTS
-%----------------------------------------------------------------------------------------
-\section{Open Source Projects}
+{
+\raggedright\large  Software Engineer II\\
+\textit{December 2015 - March 2018}\\
+\textit{Forcepoint, Austin, TX}\\
+\raggedright\small \textit{Software Engineer I}\\
+\raggedright\small \textit{Associate Software Engineer}\\
+[5pt]
+}
 
-\begin{tabular}{rl}
-& UnlockedEdu - Open Source Educational Resources\\
-& \quad \href{https://www.unlockededu.org}{https://www.unlockededu.org} \\
-\end{tabular}\\[10pt]
-
-
+\normalsize{Designed and implemented a Cloud based platform for CI/CD and application deployment for the Cloud 2.0 initiative on AWS. Integral part of the team that re-architected an on-premise CentOS based secure operating system in an effort to replace the legacy product. Implemented a custom plugin based initialization framework to allow for quick development of new software integrations. Implemented CI/CD pipelines for the build, code quality checks, and documentation generation of the code base. Promoted multiple times within same team.}\\
 
 
 \end{minipage} % End the left-hand side of the page
@@ -158,7 +143,7 @@ Experienced engineer having worked as both a software and systems engineer with 
 \raisebox{-4pt}{\textifsymbol{18}} & 11915 Stonehollow Dr. \#1637 Austin, TX \\ % Address
 \raisebox{-3pt}{\Mobilefone} & (512)387-0297 \\ % Phone number
 \raisebox{-1pt}{\Letter} & \href{mailto:mason@masonegger.com}{mason@masonegger.com} \\ % Email address
-\Keyboard & \href{https://www.masonegger.com}{https://www.masonegger.com} \\ % Website
+\Keyboard & \href{https://mason.dev}{https://mason.dev} \\ % Website
 \end{tabular}
 }
 }\\
@@ -175,11 +160,11 @@ Languages
 Operating Systems
 & \textsc{Linux (All flavors)},  \textsc{FreeBSD}, \textsc{OpenBSD} \\
 Systems
-& \textsc{Docker}, \textsc{Kubernetes}, \textsc{Artifactory}, \\
-& \textsc{Terraform}, \textsc{Consul}, \textsc{Vault}, \textsc{Nomad},\\
+& \textsc{Docker}, \textsc{Artifactory},  \textsc{Terraform},\\
+&  \textsc{Consul}, \textsc{Vault}, \textsc{Nomad},\\
 & \textsc{Packer}, \textsc{Vagrant}, \textsc{Networking}, \textsc{Jenkins} \\
 Cloud
-& \textsc{AWS}, \textsc{Digital Ocean},\\
+& \textsc{AWS}, \textsc{Digital Ocean}\\
 Misc.
 & \textsc{Computer Science Education}\\
 \end{tabular}
@@ -217,8 +202,6 @@ Misc.
 
 \end{tabular}
 
-
-
 %----------------------------------------------------------------------------------------
 %	AWARDS
 %----------------------------------------------------------------------------------------
@@ -234,10 +217,7 @@ Misc.
 & \textbf{Undergraduate Academic Distinction 2014}\\
 & \textit{Texas State University}\\\\
 
-\end{tabular}\\[10pt]
-
-
-
+\end{tabular}\\
 
 %----------------------------------------------------------------------------------------
 %	Volunteer
@@ -246,6 +226,7 @@ Misc.
 \section{Volunteer} 
 
 \begin{tabular}{rl}
+2019-2020     & \textbf{Guest Lecturer}\\
 2018-2019     & \textbf{Co-Teacher, AP Computer Science A}\\
 & \textbf{TEALS}\\
 & \textit{IDEA Montopolis, High School}\\ \\
@@ -257,6 +238,42 @@ Misc.
 \end{tabular}\\
 
 %----------------------------------------------------------------------------------------
+% PROJECTS
+%----------------------------------------------------------------------------------------
+\section{Open Source Projects}
+
+\begin{tabular}{rl}
+& UnlockedEdu - Open Source Educational Resources\\
+& \quad \href{https://www.unlockededu.org}{https://www.unlockededu.org} \\
+\end{tabular}\\
+
+
+%----------------------------------------------------------------------------------------
+	
+\end{minipage} % End right-hand side of the page
+\begin{minipage}[t]{0.5\textwidth} % Start the left-hand side of the page
+\vspace{0pt} % Trick for alignment
+\section{Work Experience - Continued} 
+
+%----------------------------------------------------------------------------------------
+%	Dated Work Experience
+%----------------------------------------------------------------------------------------
+
+%------------------------------------------------
+% WORK EXPERIENCE 1
+%------------------------------------------------
+{\raggedright\large Undergraduate Instructional Assistant\\
+\textit{June 2012 - December 2015} \\
+\textit{Department of Computer Science, Texas State University}\\[5pt]}
+
+\normalsize{Lab Instructor and tutor tasked with tutoring students in a wide range of subjects and instructing course specific labs. Designed an accelerated curriculum for the advanced introductory course. Lead a team tasked with designing new software and utilities for use by faculty, staff, and students. Managed multiple departmental servers and created automated solutions for departmental tasks.}\\
+
+\end{minipage}
+\hfill
+\begin{minipage}[t]{0.44\textwidth} % Start the right-hand side of the page
+\vspace{0pt} % Trick for alignment
+
+%----------------------------------------------------------------------------------------
 %	Miscellaneous
 %----------------------------------------------------------------------------------------
 
@@ -264,11 +281,9 @@ Misc.
 
 \begin{tabular}{rl}
 & YouTube Host \href{https://www.youtube.com/masonegger}{Mason Egger}\\
-& Recordings: \textit{Trombones at Texas State}, \textit{Carol of the Bones} \\
-\end{tabular}\\[10pt]
+& Albums: \textit{Trombones at Texas State}, \textit{Carol of the Bones} \\
+\end{tabular}\\
 
-%----------------------------------------------------------------------------------------
-	
-\end{minipage} % End right-hand side of the page
+\end{minipage}
 
 \end{document}  
