joined Vrbo back logically

--- a/resume.tex
+++ b/resume.tex
@@ -98,20 +98,11 @@ Experienced engineer having worked as both a software and systems engineer with 
 %------------------------------------------------
 
 {\raggedright\large Sr. Software Engineer\\
-\textit{July 2019 - Present}\\
-\textit{Vrbo, Austin, TX} \\[5pt]}
+\textit{March 2018 - Present}\\
+\textit{Vrbo, Austin, TX} \\
+\raggedright\small \textit{Sr. Site Reliability Engineer}\\[5pt]}
 
-\normalsize{Responsible for the Ministry of Truth, Vrbo's highly available cloud platform as a service used for all application deployments and container orchestration across Vrbo's hybrid multi-cloud. Supported application deployment for roughly 2000 engineers amounting to tens of thousands of containers with a team of four. }\\
-
-%------------------------------------------------
-% WORK EXPERIENCE 3
-%------------------------------------------------
-
-{\raggedright\large Sr. Site Reliability Engineer\\
-\textit{March 2018 - July 2019}\\
-\textit{Vrbo, Austin, TX} \\[5pt]}
-
-\normalsize{Responsible for Vrbo's internal hybrid cloud Platform as a Service infrastructure, containing more than a thousand nodes and tens of thousands of containers. Worked to implement the seamless replacement of schedulers from Mesos to Nomad. Led the effort to make Vrbo a polyglot software shop by implementing first class support for Python through creating standards, pipelines, containers, and project generators for Python developers and Data Scientists. Created a unified process and led the effort for revitalizing all of the Cloud Platform documentation.}\\
+\normalsize{Currently responsible for the Ministry of Truth, Vrbo's highly available cloud platform as a service used for all application deployments and container orchestration across Vrbo's hybrid multi-cloud. Supported application deployment for roughly 2000 engineers amounting to tens of thousands of containers with a team of four. Led the effort to make Vrbo a polyglot software shop by implementing first class support for Python through creating standards, pipelines, containers, and project generators for Python developers and Data Scientists. Created a unified process and led the effort for revitalizing all of the Cloud Platform documentation. Worked to implement the seamless replacement of schedulers from Mesos to Nomad. Previously responsible for Vrbo's internal hybrid cloud Platform as a Service infrastructure, containing more than a thousand nodes and tens of thousands of containers.  }\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 2
