removing grad school, rearranging sections

--- a/resume.tex
+++ b/resume.tex
@@ -47,7 +47,7 @@
 % Other color palettes: shade=B9D7D9 and linkcolor=A40000; shade=D4D7FE and linkcolor=FF0080
 
 \hypersetup{colorlinks,breaklinks, urlcolor=linkcolor, linkcolor=linkcolor} % Set up links and colors
-
+\newcommand\tab[1][1cm]{\hspace*{#1}}
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{}
@@ -85,7 +85,7 @@
 %	OBJECTIVE
 %----------------------------------------------------------------------------------------
 \section{About Me}
-Experienced engineer having worked as both a software and systems engineer with a penchant for security, distributed systems, networking, and Python. Passionate worker and proven leader with excellent time/project/priority management skills; driven to succeed at any task. Capable learner who can not only rapidly close any knowledge gap, but enjoys teaching others and writing more practical documents/guides. Enthusiast about all things open source. Passionate educator currently volunteering teaching through the Microsoft TEALS program.
+Experienced engineer having worked as both a software and systems engineer with a penchant for security, distributed systems, networking, and Python. Passionate worker and proven leader with excellent time/project/priority management skills; driven to succeed at any task. Capable learner who can not only rapidly close any knowledge gap, but enjoys teaching others and writing more practical documents/guides. Enthusiast about all things open source. Passionate educator currently volunteering teaching through the Microsoft TEALS program. \\
 
 %----------------------------------------------------------------------------------------
 %       WORK EXPERIENCE
@@ -158,7 +158,58 @@ Cloud
 & \textsc{AWS}, \textsc{Digital Ocean}\\
 Misc.
 & \textsc{Computer Science Education}\\
+\\
 \end{tabular}
+
+%----------------------------------------------------------------------------------------
+%	Speaking
+%----------------------------------------------------------------------------------------
+
+\section{Speaking} 
+
+\begin{tabular}{ll}
+\textbf{Building Docs Like Code:} \\
+\tab\textbf{Continuous Integration for Documentation}\\
+\textit{2019} - PyTexas, Texas Linux Fest, PyOhio, PyLatam\\
+\\
+
+
+\textbf{pfSense - A Beginner's Guide to a Sensible Firewall} \\
+\textit{2016} - Texas Linux Fest\\
+\\
+\end{tabular}\\
+
+%----------------------------------------------------------------------------------------
+% PROJECTS
+%----------------------------------------------------------------------------------------
+\section{Open Source Projects}
+
+\begin{tabular}{rl}
+& UnlockedEdu - Open Source Educational Resources\\
+& \quad \href{https://www.unlockededu.org}{https://www.unlockededu.org} \\
+\\
+\end{tabular}\\
+
+%----------------------------------------------------------------------------------------
+%	Volunteer
+%----------------------------------------------------------------------------------------
+
+\section{Volunteer} 
+
+\begin{tabular}{ll}
+\textbf{Microsoft TEALS}\\
+\tab\textit{2019-2020} - Classroom Enrichment Guest Lecturer\\
+\tab\textit{2018-2019} - Co-Teacher, AP Computer Science A\\
+\tab\tab\textit {IDEA Montopolis, High School}\\
+\\
+
+\textbf{Texas State University}\\
+\tab\textit{2015-present} - Guest Lecturer\\
+\tab\textit{2018-present} - Industrial Advisory Board Member\\
+\\
+
+\end{tabular}\\
+
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION
@@ -167,13 +218,6 @@ Misc.
 \section{Education} 
 
 \begin{tabular}{ll} % Start a table with two columns, one for dates and one for qualifications
-
-%------------------------------------------------
-% EDUCATION 1
-%------------------------------------------------
-\textit{2021} \textbf{Master of Science}\\
-& \textsc{Computer Science}\\
-& \textit{Georgia Institute of Technology}\\
 
 %------------------------------------------------
 % EDUCATION 2
@@ -193,50 +237,9 @@ Misc.
 
 \end{tabular}
 
-%----------------------------------------------------------------------------------------
-%	AWARDS
-%----------------------------------------------------------------------------------------
 
-\section{Awards} 
 
-\begin{tabular}{rl}
-2016     & \textbf{Silver Performance Award}\\
-& \textit{Forcepoint}\\ \\
 
-2013-2015     & \textbf{Excellence in Service 2013, 2015}\\
-& \textbf{Excellence in Teaching 2014}\\
-& \textbf{Undergraduate Academic Distinction 2014}\\
-& \textit{Texas State University}\\\\
-
-\end{tabular}\\
-
-%----------------------------------------------------------------------------------------
-%	Volunteer
-%----------------------------------------------------------------------------------------
-
-\section{Volunteer} 
-
-\begin{tabular}{rl}
-2019-2020     & \textbf{Guest Lecturer}\\
-2018-2019     & \textbf{Co-Teacher, AP Computer Science A}\\
-& \textbf{TEALS}\\
-& \textit{IDEA Montopolis, High School}\\ \\
-
-2015-present & \textbf{Guest Lecturer}\\
-& \textbf{Industrial Advisory Board Member}\\
-& \textit{Texas State University}\\\\
-
-\end{tabular}\\
-
-%----------------------------------------------------------------------------------------
-% PROJECTS
-%----------------------------------------------------------------------------------------
-\section{Open Source Projects}
-
-\begin{tabular}{rl}
-& UnlockedEdu - Open Source Educational Resources\\
-& \quad \href{https://www.unlockededu.org}{https://www.unlockededu.org} \\
-\end{tabular}\\
 
 
 %----------------------------------------------------------------------------------------
@@ -263,6 +266,25 @@ Misc.
 \hfill
 \begin{minipage}[t]{0.44\textwidth} % Start the right-hand side of the page
 \vspace{0pt} % Trick for alignment
+
+%----------------------------------------------------------------------------------------
+%	AWARDS
+%----------------------------------------------------------------------------------------
+
+\section{Awards} 
+
+\begin{tabular}{rl}
+2016     & \textbf{Silver Performance Award}\\
+& \textit{Forcepoint}\\ \\
+
+2013-2015     & \textbf{Excellence in Service 2013, 2015}\\
+& \textbf{Excellence in Teaching 2014}\\
+& \textbf{Undergraduate Academic Distinction 2014}\\
+& \textit{Texas State University}\\\\
+
+\end{tabular}\\
+
+
 
 %----------------------------------------------------------------------------------------
 %	Miscellaneous
