--- a/resume.tex
+++ b/resume.tex
@@ -74,7 +74,7 @@
 %----------------------------------------------------------------------------------------
 
 \par{\centering{\sffamily\Huge Mason Egger}\\ % Your name
-{\color{headings}\fontspec[Variant = 2]{Times New Roman} Platform Engineer, Educator}\\[15pt]\par} 
+{\color{headings}\fontspec[Variant = 2]{Times New Roman} Developer Advocate, Educator}\\[15pt]\par} 
 	
 %----------------------------------------------------------------------------------------
 
@@ -94,30 +94,27 @@ Experienced engineer having worked as both a software and systems engineer with 
 \section{Work Experience} 
 
 %------------------------------------------------
+% WORK EXPERIENCE 5
+%------------------------------------------------
+
+{\raggedright\large Developer Advocate\\
+\textit{October 2019 - Present}\\
+\textit{DigitalOcean, Remote} \\ [5pt]}
+
+\normalsize{ }\\
+
+%------------------------------------------------
 % WORK EXPERIENCE 4
 %------------------------------------------------
 
 {\raggedright\large Sr. Software Engineer\\
-\textit{March 2018 - Present}\\
+\textit{March 2018 - September 2019}\\
 \textit{Vrbo, Austin, TX} \\
 \raggedright\small \textit{Sr. Site Reliability Engineer}\\[5pt]}
 
-\normalsize{Currently responsible for the Ministry of Truth, Vrbo's highly available cloud platform as a service used for all application deployments and container orchestration across Vrbo's hybrid multi-cloud. Supported application deployment for roughly 2000 engineers amounting to tens of thousands of containers with a team of four. Led the effort to make Vrbo a polyglot software shop by implementing first class support for Python through creating standards, pipelines, containers, and project generators for Python developers and Data Scientists. Created a unified process and led the effort for revitalizing all of the Cloud Platform documentation. Worked to implement the seamless replacement of schedulers from Mesos to Nomad. Previously responsible for Vrbo's internal hybrid cloud Platform as a Service infrastructure, containing more than a thousand nodes and tens of thousands of containers.  }\\
+\normalsize{Responsible for Vrbo's highly available cloud platform as a service used for all application deployments and container orchestration across Vrbo's hybrid multi-cloud. Supported application deployment for roughly 2000 engineers amounting to tens of thousands of containers with a team of four. Led the effort to make Vrbo a polyglot software shop by implementing first class support for Python through creating standards, pipelines, containers, and project generators for Python developers and Data Scientists. Created a unified process and led the effort for revitalizing all of the Cloud Platform documentation. Worked to implement the seamless replacement of schedulers from Mesos to Nomad. As an SRE Responsible for Vrbo's internal hybrid cloud Platform as a Service infrastructure, ensuring stability and minimal downtime of an infrastructure containing more than a thousand nodes and tens of thousands of containers across multiple clouds and on-premise datacenters spanning across multiple regions.  }\\
 
-%------------------------------------------------
-% WORK EXPERIENCE 2
-%------------------------------------------------
 
-{
-\raggedright\large  Software Engineer II\\
-\textit{December 2015 - March 2018}\\
-\textit{Forcepoint, Austin, TX}\\
-\raggedright\small \textit{Software Engineer I}\\
-\raggedright\small \textit{Associate Software Engineer}\\
-[5pt]
-}
-
-\normalsize{Designed and implemented a Cloud based platform for CI/CD and application deployment for the Cloud 2.0 initiative on AWS. Integral part of the team that re-architected an on-premise CentOS based secure operating system in an effort to replace the legacy product. Implemented a custom plugin based initialization framework to allow for quick development of new software integrations. Implemented CI/CD pipelines for the build, code quality checks, and documentation generation of the code base. Promoted multiple times within same team.}\\
 
 
 \end{minipage} % End the left-hand side of the page
@@ -131,9 +128,8 @@ Experienced engineer having worked as both a software and systems engineer with 
 
 \colorbox{shade}{\textcolor{text1}{
 \begin{tabular}{c|p{7cm}}
-\raisebox{-4pt}{\textifsymbol{18}} & 11915 Stonehollow Dr. \#1637 Austin, TX \\ % Address
-\raisebox{-3pt}{\Mobilefone} & (512)387-0297 \\ % Phone number
-\raisebox{-1pt}{\Letter} & \href{mailto:mason@masonegger.com}{mason@masonegger.com} \\ % Email address
+{\Mobilefone} & (512)387-0297 \\ % Phone number
+{\Letter} & \href{mailto:mason@masonegger.com}{mason@masonegger.com} \\ % Email address
 \Keyboard & \href{https://mason.dev}{https://mason.dev} \\ % Website
 \end{tabular}
 }
@@ -148,14 +144,14 @@ Experienced engineer having worked as both a software and systems engineer with 
 \begin{tabular}{rl}
 Languages
 & \textsc{Python}, \textsc{Java}, \textsc{C++}, \textsc{C}\\
+Web Frameworks
+& \textsc{Flask}, \textsc{Django}, \textsc{FastAPI}\\
 Operating Systems
 & \textsc{Linux (All flavors)},  \textsc{FreeBSD}, \textsc{OpenBSD} \\
 Systems
-& \textsc{Docker}, \textsc{Artifactory},  \textsc{Terraform},\\
+& \textsc{Docker},  \textsc{Terraform},\\
 &  \textsc{Consul}, \textsc{Vault}, \textsc{Nomad},\\
 & \textsc{Packer}, \textsc{Vagrant}, \textsc{Networking}, \textsc{Jenkins} \\
-Cloud
-& \textsc{AWS}, \textsc{Digital Ocean}\\
 Misc.
 & \textsc{Computer Science Education}\\
 \\
@@ -252,6 +248,21 @@ Misc.
 %----------------------------------------------------------------------------------------
 %	Dated Work Experience
 %----------------------------------------------------------------------------------------
+
+%------------------------------------------------
+% WORK EXPERIENCE 2
+%------------------------------------------------
+
+{
+\raggedright\large  Software Engineer II\\
+\textit{December 2015 - March 2018}\\
+\textit{Forcepoint, Austin, TX}\\
+\raggedright\small \textit{Software Engineer I}\\
+\raggedright\small \textit{Associate Software Engineer}\\
+[5pt]
+}
+
+\normalsize{Designed and implemented a Cloud based platform for CI/CD and application deployment for the Cloud 2.0 initiative on AWS. Integral part of the team that re-architected an on-premise CentOS based secure operating system in an effort to replace the legacy product. Implemented a custom plugin based initialization framework to allow for quick development of new software integrations. Implemented CI/CD pipelines for the build, code quality checks, and documentation generation of the code base. Promoted multiple times within same team.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE 1
